Fix code review findings